--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-
-# Syntax highlighting for ClojureDart files
+* linguist-vendored
+*.cljd linguist-vendored=false
 *.cljd linguist-language=Clojure
